# HWSW-codesign

./: README.md  hw2.dtp  hw2.prj
8051/: 8051_iss  8051_iss.cpp  8051_iss.dsp  8051_iss.dsw  8051_iss.ncb  8051_iss.opt  8051_iss.plg  CMakeCache.txt  CMakeLists.txt  FIR_asic.cpp  FIR_asic.h  Makefile  Xram.h  cmake_install.cmake  core_8051.cpp  core_8051.h  creg.h  decoder.h  homework4.t  hw2.c  matrix.h  morse.h  op_bytes.cpp  periph.h  sram.h  top.cpp  top.h  waveform.vcd
Debug/Exe/: hw2.hex  hw2.sym  hw2.t
IAR/8051-231C/: autorun.ini
IAR/8051-231C/crack/: IAR.reg  YgH.nfo  s8051.cdr
IAR/8051-231C/doc/ew8051/doc/: CLibrary.html  a8051.html  baseline.html  clib8051.htm  cs8051.html  cs8051_ex.html  cs8051r.htm  cwgui.htm  demo.html  ewgui.htm  float.html  icc8051.html  intr8051.htm  kickstart.html
hex2byte/: HEX2BYTE.C  hex2byte.dsp  hex2byte.dsw  hex2byte.ncb  hex2byte.opt  hex2byte.plg
hex2byte/Debug/: hex2byte.ilk  hex2byte.pch  vc60.idb
